# rustris

./: Cargo.toml
cli/: Cargo.toml  build.rs
cli/src/: display.rs  get_input.rs  get_key.c  main.rs
core/: Cargo.toml
core/src/: bag.rs  board.rs  colour.rs  game.rs  input.rs  kicks.rs  lib.rs  piece.rs  point.rs  replay.rs  score.rs
core/src/tests/: mod.rs  spin_180.rs  t_spin.rs  util.rs  zs_spin.rs
src/: bag.rs  board.rs  config.rs  display.rs  get_input.rs  get_key.rs  input.rs  kicks.rs  main.rs  piece.rs  replay.rs
