[package]
name = "rustris"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
core = { path = "../core" }
chrono = "0.4"
rand = { version = "0.8", features = [ "small_rng" ] }

[build-dependencies]
cc = "1.0"