[package]
name = "core"
version = "0.1.0"
edition = "2021"
authors = ["Tarren <me@tarren.moe>"]
description = "The core of rustris a block stacking game written in rust"
license = "MIT"
repository = "https://github.com/EpokTarren/rustris"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
getrandom = { version = "0.2", features = ["js"] }
rand = { version = "0.8", features = [ "small_rng" ] }
wasm-bindgen = "0.2"